Ajout Démarrage de session
Ouverture de session pour récupérer les variables de connexion

--- a/formValidFrais.htm
+++ b/formValidFrais.htm
@@ -1,3 +1,8 @@
+<?php
+session_start(); //On dÃ©marre la session AVANT toute chose
+?>
+ 
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Validation des frais de visite</title>
@@ -14,7 +19,7 @@
 	<h2>Outils</h2>
 	<ul><li>Frais</li>
 		<ul>
-			<li><a href="formValidFrais.htm" >Enregistrer opération</a></li>
+			<li><a href="formValidFrais.htm" >Enregistrer opÃ©ration</a></li>
 		</ul>
 	</ul>
 </div>
@@ -30,31 +35,31 @@
 		<p class="titre" />
 		<div style="clear:left;"><h2>Frais au forfait </h2></div>
 		<table style="color:white;" border="1">
-			<tr><th>Repas midi</th><th>Nuitée </th><th>Etape</th><th>Km </th><th>Situation</th></tr>
+			<tr><th>Repas midi</th><th>NuitÃ©e </th><th>Etape</th><th>Km </th><th>Situation</th></tr>
 			<tr align="center"><td width="80" ><input type="text" size="3" name="repas"/></td>
 				<td width="80"><input type="text" size="3" name="nuitee"/></td> 
 				<td width="80"> <input type="text" size="3" name="etape"/></td>
 				<td width="80"> <input type="text" size="3" name="km" /></td>
 				<td width="80"> 
 					<select size="3" name="situ">
-						<option value="E">Enregistré</option>
-						<option value="V">Validé</option>
-						<option value="R">Remboursé</option>
+						<option value="E">EnregistrÃ©</option>
+						<option value="V">ValidÃ©</option>
+						<option value="R">RemboursÃ©</option>
 					</select></td>
 				</tr>
 		</table>
 		
 		<p class="titre" /><div style="clear:left;"><h2>Hors Forfait</h2></div>
 		<table style="color:white;" border="1">
-			<tr><th>Date</th><th>Libellé </th><th>Montant</th><th>Situation</th></tr>
+			<tr><th>Date</th><th>LibellÃ© </th><th>Montant</th><th>Situation</th></tr>
 			<tr align="center"><td width="100" ><input type="text" size="12" name="hfDate1"/></td>
 				<td width="220"><input type="text" size="30" name="hfLib1"/></td> 
 				<td width="90"> <input type="text" size="10" name="hfMont1"/></td>
 				<td width="80"> 
 					<select size="3" name="hfSitu1">
-						<option value="E">Enregistré</option>
-						<option value="V">Validé</option>
-						<option value="R">Remboursé</option>
+						<option value="E">EnregistrÃ©</option>
+						<option value="V">ValidÃ©</option>
+						<option value="R">RemboursÃ©</option>
 					</select></td>
 				</tr>
 		</table>		
